--- a/prjFirstMVC/Views/Home/Index.cshtml
+++ b/prjFirstMVC/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>第一個ASP.NET MVC</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p>@ViewBag.DateTime</p>
 </div>
 
 <div class="row">
